--- a/app/src/main/res/layout/fragment_find_panel_book.xml
+++ b/app/src/main/res/layout/fragment_find_panel_book.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/search_theme"
+
+    android:background="#efefef"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="20dp"
 
