--- a/app/src/main/res/layout/fragment_database_book_list_category.xml
+++ b/app/src/main/res/layout/fragment_database_book_list_category.xml
@@ -7,6 +7,8 @@
 
   <ListView
       android:layout_width="match_parent"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
       android:divider="@null"
       android:dividerHeight="0dp"
       android:id="@+id/DatabaseBookListCategory_categoryBookList"
