--- a/app/src/main/res/layout/one_popular_book_2.xml
+++ b/app/src/main/res/layout/one_popular_book_2.xml
@@ -6,7 +6,7 @@
     android:layout_marginLeft="55dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="55dp"
-
+    android:descendantFocusability="blocksDescendants"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper
         android:layout_width="match_parent"
