--- a/app/src/main/res/layout/onepopularbook.xml
+++ b/app/src/main/res/layout/onepopularbook.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
 
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper
+    <LinearLayout
         android:layout_width="320dp"
         android:layout_alignParentTop="true"
 
@@ -90,5 +90,5 @@
 
 
         </RelativeLayout>
-    </com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper>
+    </LinearLayout>
 </FrameLayout>
