--- a/app/src/main/res/layout/one_popular_book_2.xml
+++ b/app/src/main/res/layout/one_popular_book_2.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="55dp"
     android:descendantFocusability="blocksDescendants"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_alignParentTop="true"
         android:layout_marginRight="15dp"
@@ -110,5 +110,5 @@
 
 
         </RelativeLayout>
-    </com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper>
+    </LinearLayout>
 </FrameLayout>
