--- a/app/src/main/res/layout/onecategorybook.xml
+++ b/app/src/main/res/layout/onecategorybook.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
@@ -71,4 +71,4 @@
 
 
     </LinearLayout>
-</com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper>
+</LinearLayout>
