--- a/app/src/main/res/layout/rank_list.xml
+++ b/app/src/main/res/layout/rank_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_alignParentTop="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -63,4 +63,4 @@
 
 
 </LinearLayout>
-</com.sdsmdg.harjot.materialshadows.MaterialShadowViewWrapper>
+</LinearLayout>
