--- a/app/src/main/res/layout/onecategorybook.xml
+++ b/app/src/main/res/layout/onecategorybook.xml
@@ -27,16 +27,17 @@
 
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
 
 
             android:layout_weight="2"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
 
 
             android:id="@+id/OneCategory_image"
 
-            android:layout_height="140dp"></ImageView>
+            android:layout_height="115dp"></ImageView>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -50,9 +51,9 @@
                 android:text="Klasyka"
 
                 android:gravity="center"
-                android:textStyle="bold"
 
-                android:textSize="25sp"
+
+                android:textSize="18sp"
 
 
 
