--- a/app/src/main/res/layout/book_write_by_writers.xml
+++ b/app/src/main/res/layout/book_write_by_writers.xml
@@ -1,57 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    android:layout_width="wrap_content"
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+ android:layout_margin="3dp"
+    android:padding="3dp"
     android:layout_height="wrap_content">
-
-    <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
-        android:layout_width="210dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="18dp"
+<RelativeLayout
 
 
-        android:background="#eee"
-    android:id="@+id/gga"
 
-        app:corner_radius="6dp">
+
+
+
+
+    android:layout_height="wrap_content"
+
+
+android:layout_margin="5dp"
+    android:layout_width="240dp"
+    android:elevation="5dp"
+
+    android:paddingRight="10dp"
+    android:layout_marginRight="10dp"
+    android:background="@drawable/search_theme"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+
+
+
+
+    >
+
+
 
 
 
 
     <ImageView
-        android:layout_width="130dp"
+        android:layout_width="96dp"
+        android:layout_height="128dp"
         android:layout_marginLeft="10dp"
         android:layout_alignParentTop="true"
         android:id="@+id/BookWriteByAuthors_imageBook"
         android:layout_alignParentLeft="true"
         android:layout_margin="5dp"
 
-        android:layout_height="180dp"></ImageView>
+        ></ImageView>
 
     <TextView
-        android:layout_width="130dp"
-        android:layout_below="@+id/BookWriteByAuthors_imageBook"
+        android:layout_width="match_parent"
+        android:layout_toEndOf="@+id/BookWriteByAuthors_imageBook"
         android:textStyle="bold"
+        android:layout_marginTop="5dp"
+
         android:fontFamily="@font/roboto_bold"
-        android:layout_marginLeft="5dp"
-        android:textAlignment="center"
+
+
         android:text="Pan Tadeusz"
         android:id="@+id/BookWriteByAuthors_nameBook"
         android:textSize="17sp"
+        android:textColor="#000"
         android:layout_height="wrap_content"></TextView>
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_margin="5dp"
-        android:textSize="26sp"
         android:id="@+id/BookWriteByAuthors_markBook"
-        android:text="7.23"
-        android:textColor="@color/colorAccent2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/BookWriteByAuthors_nameBook"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/BookWriteByAuthors_imageBook"
-        android:layout_below="@+id/BookWriteByAuthors_imageBook"
-        android:layout_height="wrap_content"></TextView>
+        android:fontFamily="@font/mu"
+
+        android:text="5,5"
+        android:textColor="@color/colorAccent"
+        android:textSize="17sp" />
+
+    <me.zhanghai.android.materialratingbar.MaterialRatingBar
+        android:id="@+id/YourMark_ratingBook"
+        style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@+id/BookWriteByAuthors_nameBook"
+        android:layout_marginTop="6dp"
+        android:layout_toEndOf="@+id/BookWriteByAuthors_markBook"
+
+        android:isIndicator="false"
+        android:numStars="1"
+        android:rating="6"
 
 
-    </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
+        android:stepSize="1.0"
+        android:textAlignment="textStart" />
+
+
+
     </RelativeLayout>
+</FrameLayout>
