--- a/app/src/main/res/layout/newbook.xml
+++ b/app/src/main/res/layout/newbook.xml
@@ -69,6 +69,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:paddingBottom="30dp"
+                    android:layout_margin="5dp"
 
 
                     android:background="@drawable/search_theme"
@@ -109,7 +110,7 @@
                         android:text="(39 ocen)" />
 
                     <TextView
-                        android:id="@+id/Book_userBookMark"
+                        android:id="@+id/ProfileWriters_writersMark"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/Book_yearPublish"
@@ -130,7 +131,7 @@
 
                         android:layout_below="@+id/Book_yearPublish"
                         android:layout_marginTop="3dp"
-                        android:layout_toEndOf="@+id/Book_userBookMark"
+                        android:layout_toEndOf="@+id/ProfileWriters_writersMark"
 
                         android:isIndicator="false"
                         android:numStars="1"
@@ -204,7 +205,7 @@
 
 
                     <TextView
-                        android:id="@+id/Book_gentreBook_1"
+                        android:id="@+id/ProfileWriters_ifTopBook"
                         android:layout_width="wrap_content"
 
                         android:layout_height="wrap_content"
@@ -219,13 +220,13 @@
                         android:textColor="@color/colorAccent2" />
 
                     <TextView
-                        android:id="@+id/Book_gentreBook_2"
+                        android:id="@+id/ProfileWriters_ifTopWriters"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignBottom="@+id/Book_photoBook"
                         android:layout_marginLeft="5dp"
 
-                        android:layout_toEndOf="@+id/Book_gentreBook_1"
+                        android:layout_toEndOf="@+id/ProfileWriters_ifTopBook"
                         android:background="@drawable/gray_theme"
                         android:fontFamily="@font/mu"
                         android:paddingLeft="20dp"
@@ -237,7 +238,7 @@
                         android:id="@+id/Book_gentreBook_3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/Book_gentreBook_2"
+                        android:layout_below="@+id/ProfileWriters_ifTopWriters"
                         android:layout_marginTop="10dp"
                         android:layout_toEndOf="@+id/Book_photoBook"
 
@@ -278,7 +279,7 @@
                 android:fontFamily="@font/monte"
                 android:background="@drawable/search_theme"
                 android:layout_marginRight="20dp"
-                android:id="@+id/textDescription"
+                android:id="@+id/ProfileWriters_infoAboutAuthors"
                 android:layout_below="@+id/Book_description"
                 android:text="Pan Tadeusz, czyli Ostatni zajazd na Litwie – poemat epicki Adama Mickiewicza wydany w dwóch tomach w 1834 w Paryżu przez Aleksandra Jełowickiego. Ta epopeja narodowa powstała w latach 1832–1834 w Paryżu. Składa się z dwunastu ksiąg pisanych wierszem, trzynastozgłoskowym aleksandrynem polskim"
                 android:layout_height="wrap_content" />
@@ -297,7 +298,7 @@
                 android:textSize="15sp"
                 android:textColor="#000"
                 android:textStyle="bold"
-                android:layout_below="@+id/textDescription"
+                android:layout_below="@+id/ProfileWriters_infoAboutAuthors"
                 android:layout_height="wrap_content" />
 
             <LinearLayout
@@ -325,7 +326,7 @@
 
                     android:layout_below="@+id/Book_yearPublish"
                     android:layout_marginTop="3dp"
-                    android:layout_toEndOf="@+id/Book_userBookMark"
+                    android:layout_toEndOf="@+id/ProfileWriters_writersMark"
 
                     android:isIndicator="false"
                     android:numStars="5"
@@ -435,7 +436,7 @@ android:id="@+id/ff"
 
                     android:layout_below="@+id/Book_yearPublish"
                     android:layout_marginTop="3dp"
-                    android:layout_toEndOf="@+id/Book_userBookMark"
+                    android:layout_toEndOf="@+id/ProfileWriters_writersMark"
 
                     android:isIndicator="false"
                     android:numStars="5"
@@ -493,7 +494,7 @@ android:id="@+id/ff"
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_below="@+id/textDescription"
+                android:layout_below="@+id/ProfileWriters_infoAboutAuthors"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
                 android:orientation="horizontal"
