--- a/app/src/main/res/layout/onecategorybook.xml
+++ b/app/src/main/res/layout/onecategorybook.xml
@@ -32,17 +32,15 @@
 
             android:layout_weight="2"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
+
+            android:layout_gravity="center"
 
 
             android:id="@+id/OneCategory_image"
 
             android:layout_height="115dp"></ImageView>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_weight="10"
-            android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/OneCategory_Name"
@@ -50,22 +48,24 @@
                 android:textColor="#000"
                 android:text="Klasyka"
 
-                android:gravity="center"
+                android:layout_gravity="center"
+                android:textAlignment="center"
 
 
                 android:textSize="18sp"
+                android:paddingRight="90dp"
 
 
 
 
 
-                android:layout_marginTop="55dp"
+
 
                 android:fontFamily="@font/monte"
                 android:layout_height="wrap_content"></TextView>
 
 
-        </RelativeLayout>
+
 
 
 
