--- a/app/src/main/res/layout/rank_list.xml
+++ b/app/src/main/res/layout/rank_list.xml
@@ -15,44 +15,38 @@
     android:background="@drawable/search_theme"
     android:padding="8dp"
     android:elevation="7dp"
-    android:layout_margin="15dp"
+
+    android:layout_marginRight="40dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginBottom="15dp"
     android:weightSum="12"
     android:layout_height="175dp" >
 
 
-    <ImageView
-        android:layout_width="90dp"
 
-
-        android:layout_weight="2"
-        android:layout_marginLeft="10dp"
-
-
-        android:id="@+id/Rank_imageList"
-
-        android:layout_height="175dp"></ImageView>
 
 
         <TextView
             android:layout_width="match_parent"
             android:id="@+id/Rank_mainTextList"
-            android:layout_marginLeft="5dp"
-            android:paddingRight="40dp"
+
             android:text="Książek"
             android:gravity="center"
 
+
+
+            android:textSize="16sp"
+            android:textColor="#000"
             android:textStyle="bold"
 
-            android:textSize="35sp"
 
 
 
 
+            android:layout_gravity="center"
 
-
-            android:layout_marginTop="56dp"
-
-            android:fontFamily="@font/mu"
+            android:fontFamily="@font/monte"
             android:layout_height="60dp"></TextView>
 
 
