--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F89D13</color>
-    <color name="colorPrimaryDark">#F89D13</color>
-    <color name="colorAccent">#F89D13</color>
+    <color name="colorPrimaryDark">#FFD600</color>
+    <color name="colorAccent">#FFD600</color>
     <color name="colorAccent2">#f07100</color>
     <color name="backgroundLoginLayoutColor">#FAFAFA</color>
 
