--- a/app/src/main/res/layout/fragment_rank_book.xml
+++ b/app/src/main/res/layout/fragment_rank_book.xml
@@ -29,6 +29,8 @@
     <ListView
         android:layout_below="@+id/aa"
         android:layout_marginTop="4dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
         android:id="@+id/RankBook_listBooksTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></ListView>
