--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="#efefef"
+    android:gravity="center"
+    android:layout_gravity="center"
     android:layout_height="match_parent">
 
 
@@ -11,6 +13,8 @@
         android:layout_width="match_parent"
         android:id="@+id/Rank_list"
         android:divider="@null"
+        android:layout_marginBottom="40dp"
+
         android:dividerHeight="0dp"
         android:layout_height="wrap_content">
 
